Remove get and put processes from the spec.
We don't need separate constructs for them, because get is exactly a process
and put is just like a function that returns a process.

I'm pretty sure this is a good simplification to make to the language. Not
100% sure. But pretty sure.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,6 @@
 The Great Cleanup:
+* [lang] Remove input port and output port types get and put processes.
+* [clean] renumber sections and tests after remove excess process stuff.
 * [prgm] Have TicTacToe print its own board and such rather than need a custom
   fble-tictactoe.c program to drive it.
    - blocked on it being too hard to parse the input currently
