Remove put process construct.
Use a primitive put function instead.

More cleanup to follow.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,9 @@
 The Great Cleanup:
 * [lang] Remove input port and output port types get and put processes.
-* [clean] renumber sections and tests after remove excess process stuff.
+  - Remove unused OUTPUT_TYPE stuff now that we've converted puts
+  - Rename UnaryType to ProcType
+  - Consolidate put and get tests under 'link'
+  - renumber sections and tests
 * [prgm] Have TicTacToe print its own board and such rather than need a custom
   fble-tictactoe.c program to drive it.
    - blocked on it being too hard to parse the input currently
