Dissallow duplicate arg names in functions.
Rather arbitrarily, but better than leaving it undefined?

Also, port some fblc tests to fble.

--- a/langs/fble.txt
+++ b/langs/fble.txt
@@ -523,6 +523,10 @@ arguments are supplied for the function to be fully applied.
 Multi-argument functions can be used to have O(N) application in the case of N
 arguments, whereas nested single-argument functions would require O(N^2) time.
 
+Arguments to multi-argument functions must have distinct names, because it's
+more likely you gave multiple arguments the same name accidentally than on
+purpose.
+
 5.3 Function Application
 ------------------------
 Abstract Syntax:
