--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,7 @@
 The Great Cleanup:
+* [prgm] TicTacToe: use better data structures to avoid default cases in Game
+* [test] Test case that triggers assertion that a thread isn't run when
+         aborted. Happens when 1 child of an exec aborts?
 * [clean] Don't use 'eval' when we could do a direct subst instead?
 * [clean] Misc apply should not accept POLY_APPLY_TYPE for struct values.
     The trouble is, we fail to evaluate: @(\x -> ...) y
