Initial rewrite of sudoku.
It's missing the meat of the algorithm, but we can at least represent a board,
parse an input board, and print the state of the board.

--- a/TODO.txt
+++ b/TODO.txt
@@ -27,6 +27,7 @@ The Harder Cleanup:
 Programs:
 * [prgm] Game of Life
 * [prgm] Sudoku
+* [clean] Can fble-stdio check that the function has the right type?
 
 Performance Refactor:
 * It's very unintuitive that $(f(...)) calls f(...) before executing the
