--- a/TODO.txt
+++ b/TODO.txt
@@ -1,12 +1,25 @@
-The Great Cleanup:
+Type System Cleanup
 * [clean] Don't use 'eval' when we could do a direct subst instead?
 * [clean] Misc apply should not accept POLY_APPLY_TYPE for struct values.
     The trouble is, we fail to evaluate: @(\x -> ...) y
       When we could reduce it to: (\x -> @(...)) y
       And then do the substitution.
     Figure out what it should mean to evaluate a type with typeof and poly
-    values, implement that, remove POLY_APPLY_TYPE option from misc apply, and
-    access the typeof type directly instead of using valueOfType in that case.
+    values (it should push the typeof all the way to the top as part of
+    evaluating poly), implement that, remove POLY_APPLY_TYPE option from misc
+    apply, and access the typeof type directly instead of using valueOfType in
+    that case.
+
+Sudoku
+* Implement BoxGroupOf
+* Implement BoxPosOf
+* Implement CellOfPos
+* Uncomment code for Assign step 2 Boxes.
+* Implement Assign step 3.
+* Implement Assign step 4.
+* See if this is enough to solve the board. In the likely case that it isn't,
+  add a backtracking search phase that guesses an assignment and checks if it
+  works or not.
   
 The Harder Cleanup:
 * [clean] Tracking of time in the compiler is really messy
