--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,7 @@
 Type System Cleanup
 * [clean] Don't use 'eval' when we could do a direct subst instead?
+ - make a MkPolyApplyType helper function to call subst on creation?
+ - do we need to worry about recursive substitution in the non-Eval case?
 * [clean] Misc apply should not accept POLY_APPLY_TYPE for struct values.
     The trouble is, we fail to evaluate: @(\x -> ...) y
       When we could reduce it to: (\x -> @(...)) y
@@ -10,31 +12,15 @@ Type System Cleanup
     apply, and access the typeof type directly instead of using valueOfType in
     that case.
 
-Sudoku
-* Improve performance enough to add Sudoku solving tests.
-  
-The Harder Cleanup:
-* [clean] Tracking of time in the compiler is really messy
-  Especially that we extract the pointer to the time field from NewBlock by
-  assuming what NewBlock does. Figure out some way to clean this up.
-* [clean] Figure out a nicer way to deal with fble-ref-test having access to
-  internal ref.h
-* [clean] Factor out common code for thunks used by func, link, and exec.
-* Better error messages on types that have the same name but different values.
-* Test that we don't smash the stack with many nested child threads.
-* Test that we don't leak (Thread) memory with tail recursive single binding
-  exec processes.
-* Pick a better name for FbleChoice, which is used now for more than just
-  conditional expressions. Maybe FbleNamedValue? NamedExpr?
-* Better error message when the difference between a type is accidentally
-  defining + vs. *, and it contains substituted polymorphic type variables.
-
-Programs:
-* [prgm] Game of Life
-* [prgm] Sudoku
-* [clean] Can fble-stdio check that the function has the right type?
-
 Performance Refactor:
+* Add an option to --profile to record wall clock times.
+* Clearly specify performance of evaluation in spec.
+ - We should be able to list all possible performance model parameters based
+   on the spec description.
+* Add an option to automatically determine performance model parameters based
+  on wall clock time profiling of benchmarks.
+* Ensure the implementation satisfies the performance spec. Add perf spec
+  tests as necessary to catch bugs.
 * It's very unintuitive that $(f(...)) calls f(...) before executing the
   process $(...). Clarify the spec on that and make sure we implement it
   correctly. And think about the other kinds of procs too, like put and get.
@@ -58,6 +44,7 @@ Performance Refactor:
   - md5 run on 6k file. ~7 minutes
   - tictactoe find best move for empty board. ~3 minutes
   - sudoku on sample board. ~13 minutes
+  - sudoku on empty board. ~215 minutes
 * [perf] figure out how to use 'perf' for profiling?
   perf record --call-graph dwarf [COMMAND]
   perf report -g --stdio
@@ -69,6 +56,27 @@ Performance Refactor:
 * [perf] Eval in compile.c is called a ton. Shouldn't we only need to call
   eval after a let binding? Can't we use subst or other eval-by-construction
   for everything else?
+
+The Harder Cleanup:
+* [clean] Tracking of time in the compiler is really messy
+  Especially that we extract the pointer to the time field from NewBlock by
+  assuming what NewBlock does. Figure out some way to clean this up.
+* [clean] Figure out a nicer way to deal with fble-ref-test having access to
+  internal ref.h
+* [clean] Factor out common code for thunks used by func, link, and exec.
+* Better error messages on types that have the same name but different values.
+* Test that we don't smash the stack with many nested child threads.
+* Test that we don't leak (Thread) memory with tail recursive single binding
+  exec processes.
+* Pick a better name for FbleChoice, which is used now for more than just
+  conditional expressions. Maybe FbleNamedValue? NamedExpr?
+* Better error message when the difference between a type is accidentally
+  defining + vs. *, and it contains substituted polymorphic type variables.
+
+Programs:
+* [prgm] Game of Life
+* [prgm] Sudoku - get it fast enough to add tests.
+* [clean] Can fble-stdio check that the function has the right type?
 
 Future Work:
 Fble Lib:
@@ -158,3 +166,6 @@ Future:
  Use cases:
  - Debug why sudoku solver isn't working properly by stepping through a line
    at a time and printing intermediate values.
+
+   Turns out it wasn't too hard to figure out the problem in this case without
+   a debugger.
