--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,11 @@
+Cleanup:
+* Test that we don't smash the stack with many nested child threads.
+* Test that we don't leak (Thread) memory with tail recursive single binding
+  exec processes.
+* Test that tail recursive procedures don't smash the stack.
+  - And document the performance model which says tail recursive functions
+    should not smash the stack.
+
 Performance Refactor:
 * Add an option to --profile to record wall clock times.
 * Clearly specify performance of evaluation in spec.
@@ -42,78 +50,10 @@ Performance Refactor:
 * [perf] Eval in compile.c is called a ton. Shouldn't we only need to call
   eval after a let binding? Can't we use subst or other eval-by-construction
   for everything else?
-
-The Harder Cleanup:
 * [clean] Tracking of time in the compiler is really messy
   Especially that we extract the pointer to the time field from NewBlock by
   assuming what NewBlock does. Figure out some way to clean this up.
-* [clean] Figure out a nicer way to deal with fble-ref-test having access to
-  internal ref.h
 * [clean] Factor out common code for thunks used by func, link, and exec.
-* Better error messages on types that have the same name but different values.
-* Test that we don't smash the stack with many nested child threads.
-* Test that we don't leak (Thread) memory with tail recursive single binding
-  exec processes.
-* Pick a better name for FbleChoice, which is used now for more than just
-  conditional expressions. Maybe FbleNamedValue? NamedExpr?
-* Better error message when the difference between a type is accidentally
-  defining + vs. *, and it contains substituted polymorphic type variables.
-
-Programs:
-* [prgm] Game of Life
-* [prgm] Sudoku - get it fast enough to add tests.
-* [clean] Can fble-stdio check that the function has the right type?
-
-Future Work:
-Fble Lib:
-* Should Eq just be a function or an interface?
-* Random number generator / tester?
-
-Fble App Ideas:
-* compress/deflate
-* snake - text based and graphics
-* tictactoe - text based and graphics
-* space invaders
-* scrabble crush
-* 2d minigolf
-* game of life
-
-Space Invaders:
-* Render objects - how to test?
-  manual test: Draw all objects to the screen as a gallery of them.
-* Game loop driven by timer - how to test? 
-  manual test: Have app with just ship that can be moved left and right (and
-  fire bullets into space?)
-* Pseudo-random bullet attack, UFO - how to test?
-* Collision detection
-
-Snake:
-* Make food appear randomly instead of at the tail.
-* Speed up the snake every time it eats something.
-* Test and fix bug when snake eats its tail.
-* Ignore moves that aren't orthogonal to current snake direction.
-* Keep track of and report score.
-
-Game of Life:
-* live if
-  A. is alive and have 2 or 3 live neighbors
-  B. is dead and have 3 live neighbors
-
-Miscellaneous:
-* Test that tail recursive procedures don't smash the stack.
-  - And document the performance model which says tail recursive functions
-    should not smash the stack.
-
-* Write man pages for fble and friends?
-
-* Rethink arenas and documentation, because some cases appear to assume you
-  have a bulk-free arena. Other cases its not well specified what is freed
-  explicitly and what is expected to be freed implicitly.
-
-  I claim a good model is: pass an arena to a function to say: the function
-  allocates its result in this arena. The function creates and uses a separate
-  arena for its intermediate allocations.
-
 * Document performance model.
   Specifically that we use strict evaluation to model performance because it
   is a simple model, which is essential for writing high performance code.
@@ -124,6 +64,20 @@ Miscellaneous:
   loss of a simple, modular performance model. Implementations should focus on
   improving constant factors, not improving complexity over the performance
   model.
+
+Miscellaneous:
+* [clean] Can fble-stdio check that the function has the right type?
+* Better error messages on types that have the same name but different values.
+* Write man pages for fble and friends?
+* Rethink arenas and documentation, because some cases appear to assume you
+  have a bulk-free arena. Other cases its not well specified what is freed
+  explicitly and what is expected to be freed implicitly.
+* Better error message when the difference between a type is accidentally
+  defining + vs. *, and it contains substituted polymorphic type variables.
+
+  I claim a good model is: pass an arena to a function to say: the function
+  allocates its result in this arena. The function creates and uses a separate
+  arena for its intermediate allocations.
 
 Future:
 * Implement compiler to C. Idea is translate a function body into a sequence
@@ -155,3 +109,27 @@ Future:
 
    Turns out it wasn't too hard to figure out the problem in this case without
    a debugger.
+
+Snake:
+* Make food appear randomly instead of at the tail.
+* Speed up the snake every time it eats something.
+* Test and fix bug when snake eats its tail.
+* Ignore moves that aren't orthogonal to current snake direction.
+* Keep track of and report score.
+
+Sudoku:
+* Improve performance enough to make tests useful.
+
+Game of Life:
+* live if
+  A. is alive and have 2 or 3 live neighbors
+  B. is dead and have 3 live neighbors
+
+Space Invaders:
+* Render objects - how to test?
+  manual test: Draw all objects to the screen as a gallery of them.
+* Game loop driven by timer - how to test? 
+  manual test: Have app with just ship that can be moved left and right (and
+  fire bullets into space?)
+* Pseudo-random bullet attack, UFO - how to test?
+* Collision detection
