Add FbleSuspendProfileThread and FbleResumeProfileThread.
To fix double counting with wall clock time. Now the reported total wall clock
time matches the actual wall clock time.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,5 @@
 Performance Refactor:
-* Add an option to --profile to record wall clock times.
- - Add SuspendThread and ResumeThread functions to fix wall clock tracking for
-   parallel threads.
+* Figure out why tictactoe profile seems so useless.
 * Clearly specify performance of evaluation in spec.
  - We should be able to list all possible performance model parameters based
    on the spec description.
